FLUID-2190: font-size fix. The tool.css file was setting the font-size to 80% which was just too small when the fluid-reset.css was setting the size to 13px.
svn path=/fluid/image-gallery/trunk/; revision=6408

--- a/web/src/main/webapp/css/tool.css
+++ b/web/src/main/webapp/css/tool.css
@@ -5,7 +5,7 @@
 /*SECTION 1 GENERIC SELECTORS*/
 body{
 	font-family: 'Trebuchet MS',Verdana,Geneva,Arial,Helvetica,sans-serif;
-	font-size: 80%;
+	/* font-size: 80%; // removed because it is in conflict with the fluid-reset.css */
 }	
 
 /*stub in tool_base.css - skinned here */
